fix firework command x-x